Finish people resource section

--- a/onboarding.adoc
+++ b/onboarding.adoc
@@ -25,9 +25,11 @@ Many open source communities organize events where community members get togethe
 
 == People to help with onboarding
 
-This may sound obvious, but another key resource for onboarding is other community members. Even if people do not sit in the same office, having access to more experienced community members to help people get started and answer questions can help alleviate the sense of isolation for new community members. Even a simple thing like volunteer onboarding buddies who can jump on a welcome call may be enough for a small community that is relatively new. For larger and more established communities, people may have seen working groups focused on onboarding or even community members with formal titles such as coaches or mentors. 
+This may sound obvious, but another key resource for onboarding is other community members. Even if people do not sit in the same office, having access to experienced community members to help people get started and answer questions can help alleviate the sense of isolation for new community members. Even something simple like volunteer onboarding buddies who can jump on a welcome call may be enough for a small community that is relatively new. For larger and more established communities, people may have seen working groups focused on onboarding or even community members with formal titles such as coaches or mentors. 
 
-how to get help
+Once people resoures for onboarding are in place, this information (especially on who to reach out for help) needs to be posted in multiple places so that people feel welcome to contact their onboarding resources and feel encouraged to ask questions. If getting help is difficult, new comers will feel discouraged from engaging with the community and may even decide that the community is just not for them. 
+
+Whether it's onboarding buddies, mentors, working groups, etc. you want to have a large enough pool of volunteers so that these volunteers don't feel burned out with onboarding activities especially as the community grows. What is important is to have a culture within the community so that there is an expectation on everyone to help welcome new community members. Ideally, what we want to see is a lot of people volunteering to help others whether or not they have a formal title as a coach or a mentor. Finally, if you have a formal program for onboarding working group, mentors, etc. you should not set a high barrier to entry for community members to be part of the working group or a mentor. The most important qualification should be people's willingness to help others vs. other factors such as their tenure in the community, technical expertise in the project etc. The people who are helping with onboarding do not need to have all the answers. They just need to help newcomers find answers quicker and not work alone.
 
 == Mentorship
 
