--- a/onboarding.adoc
+++ b/onboarding.adoc
@@ -4,39 +4,39 @@ Updated: 2020-12-xx
 
 == Introduction
 
-In many ways, onboarding in a new open source community is a lot like onboarding for a new job. You need to get familiar with new people, new tools, new processes, etc. so that you feel comfortable in your new settings and can start contributing. However, there are a number of ways that onboarding in open source communities can present different challenges. 
+In many ways, onboarding in a new open source community is a lot like onboarding for a new job. You need to get familiar with new people, new tools, new processes, etc. so that you feel comfortable in your new environment and can start contributing. However, there are a number of ways that onboarding in open source communities can present different challenges. 
 
-The first challenge in open source is that you work in an asynchronous and remote environment. One of the great perks of a traditional office environment is that you  are close to your co-workers and managers for face to face interactions and you can easily reach out to them for quick questions. In contrast, when you join a new open source community, you will likely work with other community members in different georgraphies and time zones. So unless there are good onboarding materials such as documentation, video tutorials, wiki pages, and other resources, it's going to be more challenging to get started in open source communties even for experienced self starters. 
+The first challenge in open source is that you work in an asynchronous and remote environment. One of the great perks of a traditional office environment is that you  are close to your co-workers and managers for face to face interactions and you can find them for quick questions. In contrast, when you join a new open source community, you will likely work with community members in different georgraphies and time zones. So unless there are good onboarding materials such as documentation, video tutorials, wiki pages, and other resources, it's going to be more challenging to get started in open source communties even for experienced self starters. 
 
-Another related challenge is that working in asynchronous/remote environment can exacerbate the imposter syndrome that people typically experince when they start new jobs. When it's more difficult to get real time help or feedback, people can get stuck with simple tools issues and feel less confident about their work. So good onboarding experience in open source communities is crucial for newcomers not to feel discouraged in their early days in the community. 
+Another related challenge is that working in asynchronous/remote environment can exacerbate the imposter syndrome that people typically experince when they start new jobs. When it's more difficult to get real time help or feedback, people can easily get stuck with simple tools issues and feel less confident about their work. So a good onboarding experience in open source communities is crucial for newcomers not to feel discouraged in their early days in the community. 
 
-Finally, no two open source communities are the same. Even for seasoned open source contributors, when they join a new community they will need to get familiar with new tools, new processes, and even new terminologies. Depending on the community, terms like contributions, community members, projects, upstream, etc. may mean something slightly different and could easily cause confusion among new community members.   
+Finally, no two open source communities are the same. Even for seasoned open source contributors, when they join a new community they will need to get familiar with new tools, new processes, and even new terminologies. Depending on the community, seemingly terms like contributions, community members, projects, upstream, etc. may mean something slightly different and can easily cause confusion for new community members.   
 
 
-== Tools for onboarding
+== Onboarding resources
 
-To work successfully in any asynchronous environment, one of the key tools and practices is good documentation. Since people not necessarily going to have fellow community members available near them to provide guidance, it's important to have important community norms, decisions, processes, etc. well documented in much more detail when compared to more traditionl office environment. Whether it's a landing page, project documentation, wiki page, etc., a good set of references are crucial for new community members to get familiar with the community and to get started. It's also important to ensure that the onboarding documentations are up to date with the latest in the community, so you want to make it easy for anyone to help keeping these contents up to date. An easy to use documentation tool definitely helps, but what's more important is to have the community culture where it's everyone one's job to keep documentations up to date. 
+To work successfully in any asynchronous environment, one of the key tools and practices is good documentation. Since people are not typically going to have fellow community members available near them to provide guidance, it's important to have important community norms, decisions, processes, etc. well documented in much more detail when compared to a more traditionl work environment. Whether it's a landing page, project documentation, wiki page, etc., a good set of references are crucial for new community members to get familiar with the community and to get started. It's also important to ensure that the onboarding documentations are up to date and reflect the latest in the community, so you want to make it easy for anyone to help keeping the contents up to date. An easy to use documentation tool definitely helps, but what's more important is to have the community culture where a good documentations is everyone's responsibility. 
 
-Whenever people join a new community, discussions on communication channels such as mailing lists or Slack are typically overwhelming to follow. To alleviate this, it's helpful to carve out a space for new community members as they get started. For example, dedicated channels such as "getting started" or "introductions" can be places for people to feel safe asking new comer questions. For more experienced community members, by helping answer questions or even simply offering encouragement on these channels will go a long way in making new community members feel welcome as they're getting started.  
+Whenever people join a new community, discussions on communication channels such as mailing lists or Slack will typically be overwhelming to follow. To alleviate this, it's helpful to carve out a space for new community members as they get started. For example, dedicated channels such as "getting started" or "introductions" can be good places for people to feel safe asking newcomer questions. For more experienced community members, by helping answer questions or even simply offering encouragement on these channels will go a long way in making new community members feel welcome as they're getting started.  
 
-Once new community members feel oriented and comfortable enough to start contributing to an open source project, their next questions will be "where can I contribute?" To help newcomers get started, it's helpful to have a list of work items that people can tackle. Many communities have a label such as "good for first time contributors", "good first issue", "help wanted", etc. that people can use to narrow down the list of issues in their communities. Issues with these labels could range from simple documentation errors, easy bug fixes, or simple tasks that new contributors can tackle so that they can have successes with their early contributions. It's also helpful have a contact person (or people) who can serve as mentors or coaches listed on these issues in case people need help getting started with their early contributions. Although issues may feel simple for experienced community member, that may not be the case for newcomers. 
+Once new community members feel oriented and comfortable enough to start contributing to an open source project, their next questions will be "where can I contribute?" To help newcomers get started, it's helpful to have a list of work items that people can tackle. Many communities have labels such as "good for first time contributors", "good first issue", "help wanted", etc. that people can use to narrow down the list of issues in their communities. Issues with these labels could range from documentation errors, easy bug fixes, or other simple tasks that new contributors can tackle so that they can have early successes. It's also helpful have a contact person (or people) who can serve as mentors or coaches listed on these issues in case people need help getting started. Although issues may look simple for experienced community members, that may not always be the case for many newcomers. 
 
-Many open source communities organize events where community members get together. Whether the events are in person or virtual, these events provide great opportunities for community members to collaborate synchronously and also to get to know each other in more relaxed settings. These events could be summits, hackathons, user confernces, etc. and it makes sense to create separate sessions (or even a track) for new community members. Your could organize formal orientation sessions as a Day 0 event if your budget allows for it, but even a lunch session so that new comers can meet other community members so they know who they can ask questions to later on can go a long way in making community members feel welcome.
+Many open source communities organize events that community members participate in. Whether the events are in person or virtual, these events provide great opportunities for community members to collaborate synchronously and also to get to know each other in more relaxed settings. These events could be summits, hackathons, user confernces, etc. and it makes sense to create separate sessions (or even a track) for new community members. You could organize formal orientation sessions as a Day 0 event if your budget allows for it, but even a lunch time session where new comers can meet other community members so they know who they can ask questions to later on can go a long way in making community members feel welcome.
 
 == People to help with onboarding
 
-This may sound obvious, but another key resource for onboarding is other community members. Even if people do not sit in the same office, having access to experienced community members to help people get started and answer questions can help alleviate the sense of isolation for new community members. Even something simple like volunteer onboarding buddies who can jump on a welcome call may be enough for a small community that is relatively new. For larger and more established communities, people may have seen working groups focused on onboarding or even community members with formal titles such as coaches or mentors. 
+This may sound obvious, but another key resource for onboarding is other community members. Even if people do not sit in the same office, having access to experienced community members to help people get started and answer questions can help alleviate the sense of isolation in the early days. Something simple like  onboarding buddies who can jump on a welcome call may be enough for a small community that is relatively new. For larger and more established communities, people may have seen working groups focused on onboarding or even community members with formal titles such as coaches or mentors. 
 
-Once people resoures for onboarding are in place, this information (especially on who to reach out for help) needs to be posted in multiple places so that people feel welcome to contact their onboarding resources and feel encouraged to ask questions. If getting help is difficult, new comers will feel discouraged from engaging with the community and may even decide that the community is just not for them. 
+Once people resoures for onboarding are in place, this information (especially on who to reach out for help) needs to be posted in multiple places so that people feel welcome to contact their onboarding resources and feel encouraged to ask questions. If getting help is difficult, new comers will feel discouraged from engaging with the community and even decide that the community may not be for them afterall. 
 
-Whether it's onboarding buddies, mentors, working groups, etc. you want to have a large enough pool of volunteers so that these volunteers don't feel burned out with onboarding activities especially as the community grows. What is important is to have a culture within the community so that there is an expectation on everyone to help welcome new community members. Ideally, what we want to see is a lot of people volunteering to help others whether or not they have a formal title as a coach or a mentor. Finally, if you have a formal program for onboarding working group, mentors, etc. you should not set a high barrier to entry for community members to be part of the working group or a mentor. The most important qualification should be people's willingness to help others vs. other factors such as their tenure in the community, technical expertise in the project etc. The people who are helping with onboarding do not need to have all the answers. They just need to help newcomers find answers quicker and not work alone.
+Whether it's onboarding buddies, mentors, working groups, etc. you want to have a large enough pool of volunteers so that these volunteers don't feel burned out with onboarding activities especially as the community grows. What is important is to have a culture within the community so that there is an expectation on everyone to help welcome new community members. Ideally, what we want to see is a lot of people volunteering to help others whether or not they have a formal title as a coach or a mentor. If you have a formal program for onboarding working group, mentors, etc. you should not set a high barrier to entry for community members to become an official onboarding resource. The most important qualification should be people's willingness to help others vs. other factors such as their tenure in the community or technical expertise in the project. The people who are helping with onboarding do not need to have all the answers. Rather, they need to help newcomers find answers quicker and not work alone.
 
 == Mentorship
 
 
 
-== Resources
+== Resources: Onboarding examples from open source communities
 
-https://docs.openstack.org/upstream-training/[OpenStack Upstream Institute]
-https://github.com/kubernetes/community/tree/master/sig-contributor-experience[Kubernetes Contributor Experience Special Interest Group]
-https://about.gitlab.com/job-families/expert/merge-request-coach/[GitLab Merge Request Coach]
+. https://docs.openstack.org/upstream-training/[OpenStack Upstream Institute]
+. https://github.com/kubernetes/community/tree/master/sig-contributor-experience[Kubernetes Contributor Experience Special Interest Group]
+. https://about.gitlab.com/job-families/expert/merge-request-coach/[GitLab Merge Request Coach]
