--- a/onboarding.adoc
+++ b/onboarding.adoc
@@ -4,14 +4,29 @@ Updated: 2020-12-xx
 
 == Introduction
 
-In many ways, onboarding in a new open source community is a lot like onboarding for a new job. You need to get familiar with new people, new tools, new processes, etc. so that you feel comfortable in your new environment and can start contributing. However, there are a number of ways that onboarding in open source communities can present different challenges. 
+Contributors are the lifeblood of any open source project. Any project not continually welcoming new participants might find itself stagnating—or, worse, falling apart.
 
-The first challenge in open source is that you work in an asynchronous and remote environment. One of the great perks of a traditional office environment is that you  are close to your co-workers and managers for face to face interactions and you can find them for quick questions. In contrast, when you join a new open source community, you will likely work with community members in different georgraphies and time zones. So unless there are good onboarding materials such as documentation, video tutorials, wiki pages, and other resources, it's going to be more challenging to get started in open source communties even for experienced self starters. 
+So any open source project desiring long-term sustainability should think deliberately about the ways it connects with, greets, and acclimates—in a word, how it "onboards"—new contributors. A well-designed onboarding process makes contributing to your project easier for participants, and it empowers contributors to positively impact the the work as quickly as possible.
 
-Another related challenge is that working in asynchronous/remote environment can exacerbate the imposter syndrome that people typically experince when they start new jobs. When it's more difficult to get real time help or feedback, people can easily get stuck with simple tools issues and feel less confident about their work. So a good onboarding experience in open source communities is crucial for newcomers not to feel discouraged in their early days in the community. 
+In this chapter, we'll discuss ...
 
-Finally, no two open source communities are the same. Even for seasoned open source contributors, when they join a new community they will need to get familiar with new tools, new processes, and even new terminologies. Depending on the community, seemingly terms like contributions, community members, projects, upstream, etc. may mean something slightly different and can easily cause confusion for new community members.   
+xxx
 
+== The importance of an onboarding experience
+
+In many ways, the experience of onboarding in a new open source community is much like one you might have in a new job.
+
+For example, when you begin working in a new position (or in an entirely new organization), you'll need to become familiar with new people, new tools, new processes, new norms, new policies, and more. And you'll likely feel motivated to do these things quickly, because you're eager to demonstrate your value to the organization and become comfortable in your new environment so you can do your best work. The faster you feel like you're making an impact, the more likely you are to stick around. And the more satisfied you'll be.
+
+But you'll also be joining a team with an extensive history—shared norms and customs, in-jokes, jargon, unspoken agreements, shared bonds, and a sense of collective identity. In short, your new team or organization will have a culture that pre-exists and pre-dates your joining it. Facets of this culture are largely intangible, but they'll significantly affect your ability to collaborate with others. An effective onboarding experience equips you to understand this culture.
+
+All of this remains true of onboarding experiences in open source communities. In particular, open source communities present onboarding challenges like:
+
+*An asynchronous and remote environment.* One of the great perks of a traditional office environment is that you  are close to your co-workers and managers for face to face interactions and you can find them for quick questions. In contrast, when you join a new open source community, you will likely work with community members in different georgraphies and time zones. So unless there are good onboarding materials such as documentation, video tutorials, wiki pages, and other resources, it's going to be more challenging to get started in open source communties even for experienced self starters. 
+
+*Imposter syndrome.*  When it's more difficult to get real time help or feedback, people can easily get stuck with simple tools issues and feel less confident about their work. So a good onboarding experience in open source communities is crucial for newcomers not to feel discouraged in their early days in the community. 
+
+*Significant variability.* No two open source communities are the same. Even for seasoned open source contributors, when they join a new community they will need to get familiar with new tools, new processes, and even new terminologies. Depending on the community, seemingly terms like contributions, community members, projects, upstream, etc. may mean something slightly different and can easily cause confusion for new community members.   
 
 == Onboarding resources
 
