--- a/onboarding.adoc
+++ b/onboarding.adoc
@@ -38,11 +38,40 @@ Once new community members feel oriented and comfortable enough to start contrib
 
 Many open source communities organize events that community members participate in. Whether the events are in person or virtual, these events provide great opportunities for community members to collaborate synchronously and also to get to know each other in more relaxed settings. These events could be summits, hackathons, user confernces, etc. and it makes sense to create separate sessions (or even a track) for new community members. You could organize formal orientation sessions as a Day 0 event if your budget allows for it, but even a lunch time session where new comers can meet other community members so they know who they can ask questions to later on can go a long way in making community members feel welcome.
 
+== Contributor pathways
+
+Opportunities for volunteers to begin lending their unique talents to an open source project are called that project's contributor pathways. The greater the number of contributor pathways your project features, the more likely it is to recruit participants with the various skills required for project success.  
+
+=== Typical contributor pathways (community focus)
+
+Documenting workflow and governance processes
+Onboarding and mentoring new members
+Localizing content into various languages
+Copywriting (for website, newsletters, blogs)
+Managing social media
+Organizing events
+
+Does your project currently offer new (and existing) contributors opportunities to contribute rewardingly to (or even take ownership of) work in each of these pathways?
+
+=== Typical community pathways (technical focus)
+
+Adding new features and documentation
+Fixing existing bugs and triaging issues
+Refactoring existing work to improve it
+Performing quality assurance
+Improving user interface and user experience
+Release engineering
+Creating and maintaining project roadmap
+Code and user interface localization
+
+Again, ask yourself: Does your project currently offer new (and existing) contributors opportunities to contribute rewardingly to (or even take ownership of) work in each of these pathways?
+
+
 == People to help with onboarding
 
 This may sound obvious, but another key resource for onboarding is other community members. Even if people do not sit in the same office, having access to experienced community members to help people get started and answer questions can help alleviate the sense of isolation in the early days. Something simple like  onboarding buddies who can jump on a welcome call may be enough for a small community that is relatively new. For larger and more established communities, people may have seen working groups focused on onboarding or even community members with formal titles such as coaches or mentors. 
 
-Once people resoures for onboarding are in place, this information (especially on who to reach out for help) needs to be posted in multiple places so that people feel welcome to contact their onboarding resources and feel encouraged to ask questions. If getting help is difficult, new comers will feel discouraged from engaging with the community and even decide that the community may not be for them afterall. 
+Once people resoures for onboarding are in place, this information (especially on who to reach out for help) needs to be posted in multiple places so that people feel welcome to contact their onboarding resources and feel encouraged to ask questions. If getting help is difficult, new comers will feel discouraged from engaging with the community and even decide that the community may not be for them afterall.
 
 Whether it's onboarding buddies, mentors, working groups, etc. you want to have a large enough pool of volunteers so that these volunteers don't feel burned out with onboarding activities especially as the community grows. What is important is to have a culture within the community so that there is an expectation on everyone to help welcome new community members. Ideally, what we want to see is a lot of people volunteering to help others whether or not they have a formal title as a coach or a mentor. If you have a formal program for onboarding working group, mentors, etc. you should not set a high barrier to entry for community members to become an official onboarding resource. The most important qualification should be people's willingness to help others vs. other factors such as their tenure in the community or technical expertise in the project. The people who are helping with onboarding do not need to have all the answers. Rather, they need to help newcomers find answers quicker and not work alone.
 
